@@ -129,6 +129,18 @@ BOOL CMergeWizardRevRange::OnInitDialog()
 
 	AdjustControlSize(IDC_REVERSEMERGE);
 
+	AddAnchor(IDC_MERGEREVRANGEFROMGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_URLCOMBO, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_BROWSE, TOP_RIGHT);
+	AddAnchor(IDC_MERGEREVRANGERANGEGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_REVISION_RANGE, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_SELLOG, TOP_RIGHT);
+	AddAnchor(IDC_REVERSEMERGE, TOP_LEFT);
+	AddAnchor(IDC_REVRANGELABEL, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_MERGEREVRANGEWCGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_WCEDIT, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_SHOWLOGWC, TOP_RIGHT);
+
 	return TRUE;
 }
 
