@@ -132,6 +132,24 @@ BOOL CMergeWizardTree::OnInitDialog()
 	AdjustControlSize(IDC_REVISION_HEAD);
 	AdjustControlSize(IDC_REVISION_N);
 
+	AddAnchor(IDC_MERGETREEFROMGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_URLCOMBO, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_BROWSE, TOP_RIGHT);
+	AddAnchor(IDC_REVISION_HEAD1, TOP_LEFT);
+	AddAnchor(IDC_REVISION_N1, TOP_LEFT);
+	AddAnchor(IDC_REVISION_START, TOP_LEFT);
+	AddAnchor(IDC_FINDBRANCHSTART, TOP_LEFT);
+	AddAnchor(IDC_MERGETREETOGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_URLCOMBO2, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_BROWSE2, TOP_RIGHT);
+	AddAnchor(IDC_REVISION_HEAD, TOP_LEFT);
+	AddAnchor(IDC_REVISION_N, TOP_LEFT);
+	AddAnchor(IDC_REVISION_END, TOP_LEFT);
+	AddAnchor(IDC_FINDBRANCHEND, TOP_LEFT);
+	AddAnchor(IDC_MERGETREEWCGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_WCEDIT, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_SHOWLOGWC, TOP_RIGHT);
+
 	return TRUE;
 }
 
